kustomize/bases/cockroachdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cockroachdb
  labels:
    app.kubernetes.io/name: cockroachdb
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: cockroachdb
    app.kubernetes.io/instance: cockroachdb
    app.kubernetes.io/version: v23.1.9
