kustomize/bases/cockroachdb/servicepublic.yaml
apiVersion: v1
kind: Service
metadata:
  # This service is meant to be used by clients of the database. It exposes a ClusterIP that will
  # automatically load balance connections to the different database pods.
  name: cockroachdb-public
  labels:
    app: cockroachdb
    app.kubernetes.io/name: cockroachdb
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: cockroachdb
    app.kubernetes.io/instance: cockroachdb
    app.kubernetes.io/version: v23.1.9
spec:
  ports:
  # The main port, served by gRPC, serves Postgres-flavor SQL, internode
  # traffic and the cli.
  - port: 26257
    targetPort: 26257
    name: grpc
  # The secondary port serves the UI as well as health and debug endpoints.
  - port: 8080
    targetPort: 8080
    name: https
  selector:
    app: cockroachdb
