kustomize/bases/cockroachdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockroachdb
  labels:
    app.kubernetes.io/name: cockroachdb
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: cockroachdb
    app.kubernetes.io/instance: cockroachdb
    app.kubernetes.io/version: v23.1.9
  annotations:
    #traefik.ingress.kubernetes.io/service.serversscheme: https
    # Use only 80 and 443 entrypoint
    #traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: cockroachdb.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cockroachdb-public
                port:
                  #number: 8080
                  name: https
